# scorta

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/: ci.yaml
.github/workflows/: ci.yaml
samples/atma15/exp/: 001_tutorial.ipynb
scorta/eda/: df.py
scorta/feature/: feature.py  feature_store.py
scorta/feature_store/: __init__.py  feature_store.py
scorta/model/: gradient_boost.py
scorta/recsys/: candidate_generate.py
scorta/testing/: __init__.py  util.py
scorta/utils/: logger.py  metrics.py  polars_utils.py  utils.py
tests/feature/: test_feature.py
tests/feature_store/: test_feature_store.py
tests/model/: test_gradient_boost.py
tests/recsys/: test_candidate_generate.py
