[tool.poetry]
name = "scorta"
version = "0.1.0"
description = ""
authors = ["zerebom <ice.choco.pudding.kokoro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lightgbm = "^3.0.0"
pandas = "^1.1.3"
numpy = "^1.19.2"
matplotlib = "^3.3.2"
xgboost = "^1.2.1"
catboost = "^0.24.2"
tqdm = "^4.50.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
