[tool.poetry]
name = "scorta"
version = "0.1.0"
description = ""
authors = ["zerebom"]
readme = "README.md"
packages = [{include = "scorta"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
polars = "^0.19.19"
pandas = "^2.1.3"
pytest = "^7.4.3"
xgboost = "^2.0.2"
catboost = "^1.2.2"
lightgbm = "^4.1.0"
seaborn = "^0.13.0"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"
loguru = "^0.7.2"
hydra-core = "^1.3.2"
wandb = "^0.16.1"

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
check_untyped_defs = true


[tool.ruff]
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".git",
]

line-length = 120
indent-width = 4


[tool.ruff.lint]
# PEP8のどのルールを対象に警告を出すか
select = [
    "C",
    "E",
    "F",
    "W",
]
ignore = [
]
fixable = ["ALL"]


[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.mccabe]
# if,forなどの複雑性をどれくらい許容するか。if,for文が11以上あると警告
# C901
max-complexity = 10




[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"
mypy = "^1.7.1"
monkeytype = "^23.3.0"
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
